--- a/index.html
+++ b/index.html
@@ -637,7 +637,7 @@ try {
                <p>Purchase price is <strong>${purchasePrice}</strong>,</p>
                 <ul>${keyDatesHtml}</ul>
                 ${specialTermsText ? `<p><strong>Additional Terms:</strong> This contract includes a contingency that it's ${specialTermsText.toLowerCase()}</p>` : ''}
-                <p>Next Steps: I'll be monitoring all these deadlines closely and will keep you informed every step of the way. You can also add these deadlines to your calendar using the links I've included here.</p>
+                <p><strong>Next Steps:</strong> I'll be monitoring all these deadlines closely and will keep you informed every step of the way. You can also add these deadlines to your calendar using the links I've included here.</p>
                 <p>This is an exciting milestone! Please don't hesitate to reach out if you have any questions – I'm here to support you throughout this process.</p>
                
                 <br>
