--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contract Analyzer & Timeline Generator - Real Estate Professional Tool</title>
     
-    <script src="https://cdn.tailwindcss.com"></script>
+   
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -124,7 +124,7 @@
   /* Fallback: works even if Tailwind CDN script fails */
   .hidden { display: none !important; }
 </style>
- 
+ <link rel="stylesheet" href="/styles.css">
 </head>
 <body class="bg-gray-100">
 
