--- a/index.html
+++ b/index.html
@@ -177,11 +177,18 @@
             </div>
         </form>
 
-        <!-- Status Section -->
-        <div id="statusSection" class="my-4 text-center">
-            <div id="loader" class="loader hidden"></div>
-            <p id="statusMessage" class="text-gray-700 font-medium"></p>
-        </div>
+       <!-- Status Section -->
+<div id="statusSection" class="my-4 text-center">
+  <!-- Loader -->
+  <div id="loader"
+       class="loader hidden"
+       style="display:none">
+    <!-- put your spinner SVG or CSS animation here -->
+  </div>
+
+  <p id="statusMessage" class="text-gray-700 font-medium"></p>
+</div>
+
 
         <!-- Results Area -->
         <div id="resultsArea" class="hidden">
