--- a/index.html
+++ b/index.html
@@ -536,7 +536,7 @@ function extractEffectiveDate(text) {
             const base64File = await fileToBase64(file);
             
            
-const prompt = `
+const prompt = '
 TASK:
 You are an AI contract parser.
 Return JSON – an array of objects. Each object has:
