--- a/index.html
+++ b/index.html
@@ -608,6 +608,7 @@ Return ONLY valid JSON, no extra text.
     }
     return i;
   });
+        const contractData = items;
 
   // 4️⃣ Display
   displayResults(items);
