--- a/index.html
+++ b/index.html
@@ -594,6 +594,35 @@ Only return valid JSON. Do not include explanation, markdown, or formatting.
             const match = aiResponseText.match(/```json\s*([\s\S]*?)```/i);
            const cleanedJsonText = match ? match[1].trim() : aiResponseText.trim();
 const parsed = JSON.parse(cleanedJsonText);
+            
+// --- 🔧 Effective Date Helper ---
+function calculateEffectiveDate(data) {
+  const buyerRaw = data.buyerSignatureDate;
+  const sellerRaw = data.sellerSignatureDate;
+
+  const buyerDate = buyerRaw ? new Date(buyerRaw) : null;
+  const sellerDate = sellerRaw ? new Date(sellerRaw) : null;
+
+  const isBuyerValid = buyerDate instanceof Date && !isNaN(buyerDate);
+  const isSellerValid = sellerDate instanceof Date && !isNaN(sellerDate);
+
+  if (!isBuyerValid && !isSellerValid) {
+    showStatus("⚠️ Could not find a valid signature date for Buyer or Seller. Please review manually.", "warning", 5000);
+    return null;
+  }
+
+  if (isBuyerValid && !isSellerValid) return buyerDate.toLocaleDateString();
+  if (!isBuyerValid && isSellerValid) return sellerDate.toLocaleDateString();
+
+  const latest = new Date(Math.max(buyerDate, sellerDate));
+  return latest.toLocaleDateString();
+}
+
+// ------------------------------------------------------------------------
+// Pull both parts
+const items = parsed.dates || [];
+const signatureDates = parsed.signatures || {};
+const effectiveDate = calculateEffectiveDate(signatureDates);
 
 // Pull both parts
 const items = parsed.dates || [];
