--- a/index.html
+++ b/index.html
@@ -667,7 +667,8 @@ items = items.map(i => {
 
 // build the legacy object so the existing UI keeps working
 contractData = buildLegacyObject(items);   // transform array ➜ object
-displayResults(contractData);
+// displayResults(contractData); // already handled below
+
 
             // 4. Populate the UI with Results
             console.log("Populating results...");
