--- a/index.html
+++ b/index.html
@@ -462,40 +462,26 @@
             return null;
         }
     }
+async function callGeminiAPI(prompt, pdfBase64) {
+    const response = await fetch('/api/analyze', {
+        method: 'POST',
+        headers: {
+            'Content-Type': 'application/json',
+        },
+        body: JSON.stringify({
+            prompt: prompt,
+            pdfBase64: pdfBase64
+        })
+    });
 
-    async function callGeminiAPI(prompt, pdfBase64) {
-        const API_KEY = 'AIzaSyCobwBNmNDqs2vM2FF0IsaOl4PJLmJC1zA';
-        const API_URL = `https://generativelanguage.googleapis.com/v1beta/models/gemini-1.5-flash:generateContent?key=${API_KEY}`;
-
-        const requestBody = {
-            contents: [{
-                parts: [
-                    { text: prompt },
-                    {
-                        inlineData: {
-                            mimeType: "application/pdf",
-                            data: pdfBase64
-                        }
-                    }
-                ]
-            }]
-        };
-
-        const response = await fetch(API_URL, {
-            method: 'POST',
-            headers: {
-                'Content-Type': 'application/json',
-            },
-            body: JSON.stringify(requestBody)
-        });
-
-        if (!response.ok) {
-            throw new Error(`API request failed: ${response.statusText}`);
-        }
-
-        const data = await response.json();
-        return data.candidates[0].content.parts[0].text;
+    if (!response.ok) {
+        const errorText = await response.text();
+        throw new Error(`API request failed: ${response.status} - ${errorText}`);
     }
+
+    const data = await response.json();
+    return data.text;
+}
 
     async function analyzePDF(file, clientInfo) {
         return new Promise((resolve, reject) => {
